minor z-index fixes

--- a/src/components/NavMenu/index.css
+++ b/src/components/NavMenu/index.css
@@ -249,24 +249,6 @@ pre {
   }
 }
 
-/* .SocialLinks {
-  width: 100%;
-  line-height: 1.25rem;
-  margin-top: 1rem;
-  a {
-    color: var(--neon-purple);
-    display: block;
-    justify-content: flex-start;
-    text-wrap: nowrap;
-    line-height: 125%;
-    margin: 0.5rem 0;
-    .Icon {
-      scale: 1.25;;
-      display: inline-block;
-    }
-  }
-} */
-
 .NavigationMenuRoot {
   position: relative;
   display: flex;
@@ -332,6 +314,7 @@ pre {
 
 .ViewportPosition {
   top: 5.6rem;
+  z-index: 20;
 }
 
 @screen sm {
